# dsif-git-main-project

./: DataFrame_Sequence_and_Processing_Overview.md  ELVTR_report.md  Feature_selection_and_challenges.md  Key_Lists_for_Data_Processing.md  ML_models_and_results.md  Neural Networks  Neural Networks.md  Neural_Network_selection.md  README.md  Understanding_feature_impact.md  Visual_Analysis.md
elvtr_main_project/: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
elvtr_main_project/docs/: mkdocs.yml
elvtr_main_project/loan_approval_scoring/: __init__.py  dataset.py  features.py  plots.py
elvtr_main_project/models/: Decision Tree_model.pkl  Decision Tree_results.pkl  Gradient Boosting_model.pkl  Gradient Boosting_results.pkl  KNN_results.pkl  Logistic Regression_model.pkl  Logistic Regression_results.pkl  Naive Bayes_model.pkl  Naive Bayes_results.pkl  Random Forest_results.pkl
elvtr_main_project/notebooks/: DataScience_UpdatedCode.ipynb  ELVTR_Data_Science_Main_Project-Clean-Kieran_Noonan-R1.00-20241103V39.ipynb  ELVTR_Data_Science_Main_Project-Kieran_Noonan-D0.04-20241101V23.ipynb  ELVTR_Data_Science_Main_Project-Kieran_Noonan-D0.04-20241102V33.ipynb  ELVTR_Data_Science_Main_Project-Kieran_Noonan-D0.04-20241102V34.ipynb  ELVTR_Data_Science_Main_Project-Kieran_Noonan-D0.04-20241102V37.ipynb  ELVTR_Data_Science_Main_Project.ipynb  ELVTR_Data_Science_Main_ProjectD0.02.ipynb  ELVTR_Data_Science_Main_ProjectD0.03.ipynb  ELVTR_Data_Science_Main_ProjectD0.04.ipynb  ELVTR_Data_Science_Main_ProjectD0.05.ipynb  ELVTR_Data_Science_Main_ProjectD0.06.ipynb  (+4 more)
(+29 files in other folders)
